Title wrapping fix.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -61,6 +61,7 @@
 
 .result.embedded {
   .getFull {
+    display: block;
     margin-left: 1.5rem;
     border-left: 1px solid transparent;
   }
